Favicon en menu core

--- a/src/html/MenuCoreDefense.html
+++ b/src/html/MenuCoreDefense.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
 	<!-- Icono que aparece en las pestañas -->
-	<link rel="shortcut icon" type="image/x-icon" href="src/images/sprite1.png">
+	<link rel="shortcut icon" type="image/x-icon" href="../images/sprite1.png">
 	<title>Core Defense</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
