Eliminado touch en normal

--- a/src/html/MenuCoreDefense.html
+++ b/src/html/MenuCoreDefense.html
@@ -325,67 +325,67 @@
 		</a>
 		
 		<img id="opciones" src = "../images/OPCIONES_BUTTON.png" class="opciones" style="z-index: 1"
-		onclick="opciones()" ontouchstart="opciones()"/>
+		onclick="opciones()"/>
 
 		<img id="instrucciones" src = "../images/INDTRUCCIONES_BUTTON.png" class="instrucciones" style="z-index: 1"
-		onclick="instrucciones()" ontouchstart="instrucciones()"/>
+		onclick="instrucciones()"/>
 
 		<img id="soloplayer" src = "../images/UNJUGADOR_BUTTON.png" class="soloplay" style="z-index: 1"
-		onclick="unJugador()" ontouchstart="unJugador()"/>
+		onclick="unJugador()"/>
 		<img id="multiplayer" src = "../images/MULTIJUGADOR_BUTTON.png" class="multijugador" style="z-index: 1"
-		onclick="multijugador()" ontouchstart="multijugador()"/>
+		onclick="multijugador()"/>
 	</p>
 
 	<p id="menuSoloPlayer" align = "center" style ="display:none">
 		<img id="fondosoloplayer" src = "../images/NIVELES_UNJUGADOR.png" style="z-index: 0" class="fondo"/>
 
 		<img id="facil" src = "../images/FACIL_BUTTON.png" class="dificultadFacil" style="z-index: 1"
-		onclick="jugar(0,1)" ontouchstart="jugarMovil(0,1)"/>
+		onclick="jugar(0,1)"/>
 
 		<img id="medio" src = "../images/MEDIO_BUTTON.png" class="dificultadMedio" style="z-index: 1"
-		onclick="jugar(1,1)" ontouchstart="jugarMovil(1,1)"/>
+		onclick="jugar(1,1)"/>
 
 		<img id="dificil" src = "../images/DIFICIL_BUTTON.png" class="dificultadDificil" style="z-index: 1"
-		onclick="jugar(2,1)" ontouchstart="jugarMovil(2,1)"/>
+		onclick="jugar(2,1)"/>
 
 		<img src = "../images/BOTONATRAS.png" class="botonAtras" style="z-index: 1"
-		onclick="atras()" ontouchstart="atras()"/>
+		onclick="atras()"/>
 	</p>
 
 	<p id="menuMultiplayer" align = "center" style ="display:none">
 		<img id="fondomultiplayer" src = "../images/NIVELES_MULTIJUGADOR.png" style="z-index: 0" class="fondo"/>
 
 		<img id="facilm" src = "../images/FACIL_BUTTON.png" class="dificultadFacil" style="z-index: 1"
-		onclick="jugar(1,2)" ontouchstart="jugarMovil(3,2)"/>
+		onclick="jugar(1,2)"/>
 
 		<img id="mediom" src = "../images/MEDIO_BUTTON.png" class="dificultadMedio" style="z-index: 1"
-		onclick="jugar(2,2)" ontouchstart="jugarMovil(4,2)"/>
+		onclick="jugar(2,2)"/>
 
 		<img id="dificilm" src = "../images/DIFICIL_BUTTON.png" class="dificultadDificil" style="z-index: 1"
-		onclick="jugar(3,2)" ontouchstart="jugarMovil(5,2)"/>
+		onclick="jugar(3,2)"/>
 
 		<img src = "../images/BOTONATRAS.png" class="botonAtras" style="z-index: 1"
-		onclick="atras()" ontouchstart="atras()"/>
+		onclick="atras()"/>
 	</p>
 
 	<p id="menuInstrucciones" align = "center" style ="display:none">
 		<img id="fondoinstrucciones" src = "../images/fondo_instrucciones_esp.png" style="z-index: 0" class="fondo"/>
 
 		<img src = "../images/BOTONATRAS.png" class="botonAtras" style="z-index: 1"
-		onclick="atras()" ontouchstart="atras()"/>
+		onclick="atras()"/>
 	</p>
 
 	<p id="menuOpciones" align = "center" style ="display:none">
 		<img id="fondoopciones" src = "../images/fondo_opciones_esp.png" style="z-index: 0" class="fondo"/>
 
 		<img id="botonidioma" src = "../images/boton españolopciones.png" class="botonIdioma" style="z-index: 1"
-		onclick="cambiarIdioma()" ontouchstart="cambiarIdioma()"/>
+		onclick="cambiarIdioma()"/>
 
 		<img id="botonsonido" src = "../images/boton on opciones.png" class="botonSonido" style="z-index: 1"
-		onclick="cambiarSonido()" ontouchstart="cambiarSonido()"/>
+		onclick="cambiarSonido()"/>
 
 		<img src = "../images/BOTONATRAS.png" class="botonAtras" style="z-index: 1"
-		onclick="atras()" ontouchstart="atras()"/>
+		onclick="atras()"/>
 	</p>
   </body>
 </html>
