Texto del index cambiado

--- a/index.html
+++ b/index.html
@@ -119,10 +119,12 @@
 		<div class = "row mar-top-80">
 				<div class = "col-md-6">		
 					<h3><a class="anchor" name="slothery"></a><strong>Slothery Plus Black Games</strong><i class="fa fa-gamepad pull-right hidden-xs-down" aria-hidden="true"></i></h3>
-					<p>Fundada originalmente como Slothery Games en el año 2015, Slothery Plus Black Games es una nueva y renovada empresa desarrolladora de videojuegos situada en Madrid, España</p>
-					<p>Slothery Plus Black Games nace bajo un ambiente de profunda tradición y se crea con el tiempo necesario para que alcance su madurez exacta.
-					De esta forma, obtenemos un estudio independiente que conjuga, bajo la atenta mirada del silicio de nuestras barricas, artesanía y modernidad.
-					En su interior, profesionales procedentes de Blizzard Entertainment, MercurySteam Entertainment, Pyro Studios, Sony Computer Entertainment y Weta Digital, se encuentran, combinando ideas y código, con la intención de proporcionar un aroma sorprendente en nuestras obras.</p>
+					<p>Fundada por estudiantes durante el transcurso de la carrera de Diseño y Desarrollo de videojuegos de la URJC. Lo que comenzó siendo como un grupo de trabajo para los
+						diversos proyectos y trabajos de la facultad, acabó convirtiéndose en algo más, ya que nuestras aspiraciones siempre han sido hacer llevar nuestra forma de trabajar 
+						y nuestra visión de los videojuegos más allá de las puertas de la universidad.
+					</p>
+					<p>Slothery Plus Black Games está compuesto por un grupo de estudiantes variado en lo que a habilidades y referencias se refiere, tanto con gustos propios como compartidos,
+						pero en el que todos aportan algo especial. Buscamos ofrecer al público algo original y sobretodo divertido. ¡Pronto anunciaremos nuevos proyectos! </p>
 				</div></a>
 			
 				<div class = "col-md-6">
