--- a/src/html/MenuCoreDefense.html
+++ b/src/html/MenuCoreDefense.html
@@ -313,6 +313,22 @@
 				img.src = "../images/boton off opciones.png";
 			}
 		}
+
+		if(navigator.userAgent.match(/iPad/i)){
+			alert("ipad");
+		}
+		if(navigator.userAgent.match(/iPhone/i)){
+			alert("iphone");
+		}
+		if(navigator.userAgent.match(/Android/i)){
+			alert("android");
+		}
+		if(navigator.userAgent.match(/BlackBerry/i)){
+			alert("blackberry");
+		}
+		if(navigator.userAgent.match(/webOS/i)){
+			alert("webos");
+		}
     </script>
   </head>
 
