--- a/src/html/MenuCoreDefense.html
+++ b/src/html/MenuCoreDefense.html
@@ -95,6 +95,8 @@
 			divOcultar.style.display='none';
 			var divOcultar = document.getElementById('menuOpciones');
 			divOcultar.style.display='none';
+			var divOcultar = document.getElementById('menuCreditos');
+			divOcultar.style.display='none';
 
 			var divMostrar = document.getElementById('menuSoloPlayer');
 			divMostrar.style.display='block';
@@ -108,6 +110,8 @@
 			var divOcultar = document.getElementById('menuInstrucciones');
 			divOcultar.style.display='none';
 			var divOcultar = document.getElementById('menuOpciones');
+			divOcultar.style.display='none';
+			var divOcultar = document.getElementById('menuCreditos');
 			divOcultar.style.display='none';
 
 			var divMostrar = document.getElementById('menuMultiplayer');
@@ -123,6 +127,8 @@
 			divOcultar.style.display='none';
 			var divOcultar = document.getElementById('menuOpciones');
 			divOcultar.style.display='none';
+			var divOcultar = document.getElementById('menuCreditos');
+			divOcultar.style.display='none';
 
 			var divMostrar = document.getElementById('menu');
 			divMostrar.style.display='block';
@@ -136,6 +142,8 @@
 			var divOcultar = document.getElementById('menu');
 			divOcultar.style.display='none';
 			var divOcultar = document.getElementById('menuOpciones');
+			divOcultar.style.display='none';
+			var divOcultar = document.getElementById('menuCreditos');
 			divOcultar.style.display='none';
 
 			var divMostrar = document.getElementById('menuInstrucciones');
@@ -151,8 +159,26 @@
 			divOcultar.style.display='none';
 			var divOcultar = document.getElementById('menuInstrucciones');
 			divOcultar.style.display='none';
+			var divOcultar = document.getElementById('menuCreditos');
+			divOcultar.style.display='none';
 
 			var divMostrar = document.getElementById('menuOpciones');
+			divMostrar.style.display='block';
+		}
+		//Muestra los creditos
+		function creditos(){
+			var divOcultar = document.getElementById('menuSoloPlayer');
+			divOcultar.style.display='none';
+			var divOcultar = document.getElementById('menuMultiplayer');
+			divOcultar.style.display='none';
+			var divOcultar = document.getElementById('menu');
+			divOcultar.style.display='none';
+			var divOcultar = document.getElementById('menuInstrucciones');
+			divOcultar.style.display='none';
+			var divMostrar = document.getElementById('menuOpciones');
+			divMostrar.style.display='none';
+
+			var divMostrar = document.getElementById('menuCreditos');
 			divMostrar.style.display='block';
 		}
 		//Carga el juego segun la dificultad
@@ -212,6 +238,9 @@
 				img.src = "../images/fondo_opciones_ingles.png";
 				img = document.getElementById("botonidioma");
 				img.src = "../images/boton ingles opciones.png";
+
+				img = document.getElementById("fondocreditos");
+				img.src = "../images/fondo_creditos_ingles.png";
 			}else{
 				window.localStorage.setItem("idioma", "es");
 
@@ -251,6 +280,9 @@
 				img.src = "../images/fondo_opciones_esp.png";
 				img = document.getElementById("botonidioma");
 				img.src = "../images/boton españolopciones.png";
+
+				img = document.getElementById("fondocreditos");
+				img.src = "../images/fondo_creditos_español.png";
 			}
 		}
 		//Cambia el sonido
@@ -343,9 +375,8 @@
 	<p align="center" id ="menu">
 		<img src = "../images/fondo.png" style="z-index: 0" class="fondo"/>
 
-		<a href="../html/Contacto.html">
-			<img id="creditos" src = "../images/CREDITOS_BUTTON.png" class="creditos" style="z-index: 1"/>
-		</a>
+		<img id="creditos" src = "../images/CREDITOS_BUTTON.png" class="creditos" style="z-index: 1"
+		onmousedown="creditos()"/>
 		
 		<img id="opciones" src = "../images/OPCIONES_BUTTON.png" class="opciones" style="z-index: 1"
 		onmousedown="opciones()"/>
@@ -393,6 +424,13 @@
 
 	<p id="menuInstrucciones" align = "center" style ="display:none">
 		<img id="fondoinstrucciones" src = "../images/fondo_instrucciones_esp.png" style="z-index: 0" class="fondo"/>
+
+		<img src = "../images/BOTONATRAS.png" class="botonAtras" style="z-index: 1"
+		onmousedown="atras()"/>
+	</p>
+
+	<p id="menuCreditos" align = "center" style ="display:none">
+		<img id="fondocreditos" src = "../images/fondo_creditos_español.png" style="z-index: 0" class="fondo"/>
 
 		<img src = "../images/BOTONATRAS.png" class="botonAtras" style="z-index: 1"
 		onmousedown="atras()"/>
